# swag-mcp

./: .app.json  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  =3.9.0  CHANGELOG.md  CLAUDE.md  Dockerfile  Justfile  LICENSE  ORCHESTRATOR_REFACTORING_PLAN.md  README.md  SWAG_MCP_REFACTORING_PLAN.md  SWAG_MCP_TESTING_REPORT.md  UNIFIED_TOOL_REFACTOR_PLAN.md  docker-compose.yaml  entrypoint.sh  gemini-extension.json  install.sh  plugin.json  pyproject.toml  server.json  swag-mcp-pr3-fixes.md  swag-test-commands.md  swag.subdomain.conf
.agents/plugins/: marketplace.json
.beads/: metadata.json
.beads/hooks/: pre-commit
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: dependencies.yml  docker-publish.yml  test.yml
.lavra/memory/: knowledge.jsonl
.test-proxy-confs/: _template.subdomain.conf.sample  jellyfin.subdomain.conf.sample  plex.subdomain.conf.sample  swag-mcp-test-1757029828843022-edit.subdomain.conf  swag-mcp-test-1757030457566616-remove.subdomain.conf.backup.20250904_200059_761053  swag-mcp-test-1757030975649523-update-upstream.subdomain.conf  swag-mcp-test-1757030975649523-update-upstream.subdomain.conf.backup.20250904_200937_840211
config/: mcporter.json
config/nginx/: mcp.conf  oauth.conf
docs/: CHECKLIST.md  CLAUDE.md  CONFIG.md  GUARDRAILS.md  INVENTORY.md  README.md  SETUP.md  TEMPLATES.md  mcp-remote-server-analysis.md  middleware.md  template-enhancement-proposal.md  token-efficient-formatting.md
docs/mcp/: AUTH.md  CICD.md  CLAUDE.md  CONNECT.md  DEPLOY.md  DEV.md  ELICITATION.md  ENV.md  LOGS.md  MCPORTER.md  MCPUI.md  PATTERNS.md  PRE-COMMIT.md  PUBLISH.md  RESOURCES.md  SCHEMA.md  TESTS.md  TOOLS.md  TRANSPORT.md  WEBMCP.md
docs/plans/: 2026-03-23-mcp-oauth-gateway-swag.md
docs/plugin/: AGENTS.md  CHANNELS.md  CLAUDE.md  COMMANDS.md  CONFIG.md  HOOKS.md  MARKETPLACES.md  OUTPUT-STYLES.md  PLUGINS.md  SCHEDULES.md  SKILLS.md
docs/repo/: CLAUDE.md  MEMORY.md  RECIPES.md  REPO.md  RULES.md  SCRIPTS.md
docs/stack/: ARCH.md  CLAUDE.md  PRE-REQS.md  TECH.md
docs/upstream/: CLAUDE.md
hooks/: hooks.json
hooks/scripts/: ensure-gitignore.sh  ensure-ignore-files.sh  sync-env.sh
scripts/: lint-plugin.sh  smoke-test.sh
skills/swag/: SKILL.md
swag_mcp/: CLAUDE.md  __main__.py  constants.py  server.py  validators.py
swag_mcp/core/: CLAUDE.md  config.py  constants.py  container.py  logging_config.py
swag_mcp/middleware/: CLAUDE.md  __init__.py  error_handling.py  rate_limiting.py  request_logging.py  timing.py
swag_mcp/models/: CLAUDE.md  commands.py  config.py  enums.py
swag_mcp/plugins/: __init__.py  base.py
swag_mcp/services/: CLAUDE.md  __init__.py  backup_manager.py  config_operations.py  config_updaters.py  errors.py  file_operations.py  filesystem.py  health_check.py  health_monitor.py  mcp_operations.py  resource_manager.py  ssh_filesystem.py  swag_manager.py  swag_manager.py.backup  template_manager.py  validation.py
swag_mcp/tools/: CLAUDE.md  swag.py
swag_mcp/tools/handlers/: __init__.py  backups.py  configs.py  health.py  logs.py
swag_mcp/utils/: CLAUDE.md  __init__.py  async_utils.py  error_codes.py  error_handlers.py  error_messages.py  formatters.py  mcp_cache.py  mcp_streaming.py  mcp_token_optimizer.py  token_efficient_formatter.py  tool_decorators.py  tool_helpers.py  uri.py  validators.py
templates/: CLAUDE.md  mcp-subdomain.conf.j2  mcp-subfolder.conf.j2  mcp.subdomain.conf.j2  mcp_location_block.j2  subdomain.conf.j2  subfolder.conf.j2  swag-compliant-mcp-subdomain.conf.j2  swag-compliant-mcp-subfolder.conf.j2
tests/: TEST_COVERAGE.md  __init__.py  conftest.py  test_behavior_services.py  test_behavior_tools.py  test_concurrency.py  test_concurrency_race_bugs.py  test_config.py  test_coverage_boost.py  test_docker_chaos_bugs.py  test_error_handling.py  test_error_recovery_bugs.py  test_filesystem.py  test_integration.py  test_live.sh  test_main.py  test_mcp_remote_upstream.py  test_middleware.py  test_middleware_coverage.py  test_middleware_simple.py  test_mocking.py  test_performance.py  test_performance_benchmarks.py  test_property_based.py  test_security_behavior.py  test_server_coverage.py  test_server_simple.py  test_server_utils.py  test_services.py  test_swag_actions.py  test_swag_manager_comprehensive.py  test_swag_manager_focused.py  test_swag_manager_service.py  test_swag_manager_simple.py  test_template_injection_bugs.py  test_tool_integration.py  test_tools.py  test_unicode_encoding_bugs.py  test_uri.py  test_validation.py  (+1 more)
tests/fixtures/: __init__.py  sample_configs.py
tests/mcporter/: test-tools.sh
tests/test-proxy-confs/: _template.subdomain.conf.sample  jellyfin.subdomain.conf.sample  plex.subdomain.conf.sample
